<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="email">Email</string>
    <string name="password">PassWord</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="newuser">Register</string>
    <string name="login">login</string>
    <string name="welcome_to_the_shoe_store">Welcome To The Shoe Store</string>
    <string name="tap_below_to_go_to_instructions">Tap below to go to instructions</string>
    <string name="instructions">Instructions</string>
    <string name="_1_navigate_to_shoelist_page_and_scroll_down_to_see_all_the_list">1- Tap the List buttom to Navigate to ShoeList page and scroll down to see all the List</string>
    <string name="use_shoe_detail_page">2-Use Shoe Detail Page to add more shoes to the list</string>
    <string name="navigate_to_shoe_list">Navigate to shoe list</string>
    <string name="shoesname">Name: %1$s</string>
    <string name="shoessize">Size: %1$s</string>
    <string name="shoescompany">Company: %1$s</string>
    <string name="description">Description: %1$s</string>
    <string name="addshoes">addshoes</string>
    <string name="proceed">Proceed</string>
    <string name="enter_new_shoe_detail">Enter New Shoe Detail</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="description_entry">Description</string>
    <string name="size_entry">size</string>
    <string name="company_entry">Company</string>
    <string name="shoename_entry">ShoeName</string>
    <string name="shoelist_drawer">ShoeList</string>
    <string name="addnewitem">AddNewItem</string>
    <string name="zero">0.0</string>
    <string name="shoes_list">ShoeList</string>
    <string name="_instructions">Instructions</string>
    <string name="log_out">LogOut</string>
    <string name="shoename">ShoeName</string>
    <string name="showcompany">ShoeCompany</string>
    <string name="shoesize">ShoeSize</string>
    <string name="shoe_description">Description</string>
    <string name="flag">Images :</string>

    <string-array name="shoes_array">
        <item>Images :</item>
        <item>adidas</item>
        <item>nike</item>
        <item>nikeblue</item>
        <item>nikewhite</item>
        <item>reebok</item>
    </string-array>


</resources>